fixed guttar gap issue

--- a/css/hrefnick-style.css
+++ b/css/hrefnick-style.css
@@ -2,6 +2,11 @@
     width: 100%;
 }
 
+.custom-gallery {
+    display: grid;
+    column-gap: 20px;
+}
+
 .card {
     background-color: #fff;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
